<resources>
    <string name="AppsFlyerDevKey" translatable="false">NiEfxvszi8eLYAxYeMiZsH</string>
    <string name="CLEVERTAP_ACCOUNT_ID" translatable="false">W46-65R-R96Z</string>
    <string name="CLEVERTAP_TOKEN" translatable="false">256-640</string>
    <string name="app_name">You Matter</string>
    <string name="SAVE">Save</string>
    <string name="SUBMIT">Submit</string>
    <string name="RESTART">Restart</string>
    <string name="SEND">Send</string>
    <string name="FINISH">Finish</string>
    <string name="THATS_ALL">That\'s All</string>
    <string name="DONE">Done</string>
    <string name="COMPLETE_REGISTRATION">Complete Registration</string>
    <string name="NEXT">Next</string>
    <string name="PREVIOUS">Previous</string>
    <string name="OK">OK</string>
    <string name="AND">and</string>
    <string name="OR">Or</string>
    <string name="CONFIRM">Confirm</string>
    <string name="PROCEED">Proceed</string>
    <string name="VERIFY">Verify</string>
    <string name="SELECT">Select</string>
    <string name="SELECT_DATE">Select Date</string>
    <string name="CROP">Crop</string>
    <string name="CLOSE">Close</string>
    <string name="CANCEL">Cancel</string>
    <string name="EXIT">Exit</string>
    <string name="BACK">Back</string>
    <string name="START">Start</string>
    <string name="STOP">Stop</string>
    <string name="CONTINUE">Continue</string>
    <string name="CALCULATE">Calculate</string>
    <string name="RECALCULATE">Recalculate</string>
    <string name="DELETE">Delete</string>
    <string name="UPDATE">Update</string>
    <string name="EDIT">Edit</string>
    <string name="DOWNLOAD">Download</string>
    <string name="DOWNLOADS">Downloads</string>
    <string name="SHARE">Share</string>
    <string name="VIEW">View</string>
    <string name="ADD">Add</string>
    <string name="TAKE">Take</string>
    <string name="ENABLED">Enabled</string>
    <string name="DISABLED">Disabled</string>
    <string name="ALERT">Alert</string>
    <string name="VIEW_MORE">View More</string>
    <string name="REPORT">Report</string>
    <string name="DESCRIPTION">Description</string>
    <string name="RECOMMENDATIONS">Recommendations</string>
    <string name="SKIP">Skip</string>
    <string name="VALUE">Value</string>
    <string name="OBSERVATION">Observation</string>
    <string name="REFRESH">Refresh</string>
    <string name="CATEGORY">Category</string>
    <string name="DOSE">Dose</string>
    <string name="TIME">Time</string>
    <string name="SEND_OTP">Get OTP</string>
    <string name="RESEND_OTP">Resend OTP</string>
    <string name="RESEND">Resend</string>
    <string name="NO_THANKS">No thanks</string>
    <string name="DEAR_USER">Dear User</string>
    <string name="MEDICINE_REMINDER">Medicine Reminder</string>
    <string name="ALL">All</string>
    <string name="IS">is</string>
    <string name="DASHBOARD">Dashboard</string>
    <string name="HISTORY">History</string>
    <string name="DIGITIZE">Digitize</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="NONE">None</string>
    <string name="MALE">Male</string>
    <string name="FEMALE">Female</string>
    <string name="OTHER">Other</string>
    <string name="NAME">Name</string>
    <string name="CONTACT">Contact</string>
    <string name="GENDER">Gender</string>
    <string name="PHONE">Phone</string>
    <string name="PHONE_NUMBER">Phone Number</string>
    <string name="NUMBER">Number</string>
    <string name="ALTERNATE_NUMBER">Alternate Number</string>
    <string name="EMAIL">Email</string>
    <string name="EMAIL_ADDRESS">Email Address</string>
    <string name="ALTERNATE_EMAIL_ADDRESS">Alternate Email Address</string>
    <string name="ADDRESS">Address</string>
    <string name="LOGIN">Login</string>
    <string name="PASSWORD">Password</string>
    <string name="AGE">Age</string>
    <string name="BIRTH_DATE">Birth Date</string>
    <string name="DATE_OF_BIRTH">Date of Birth</string>
    <string name="MOBILE_NUMBER">Mobile Number</string>
    <string name="DATE">Date</string>
    <string name="DAY">Day</string>
    <string name="WEEK">Week</string>
    <string name="MONTH">Month</string>
    <string name="YEAR">Year</string>
    <string name="YEARS">Years</string>
    <string name="FOR">For</string>
    <string name="FROM">From</string>
    <string name="TO">to</string>
    <string name="ONLY">Only</string>
    <string name="SEC">Sec</string>
    <string name="TODAY">Today</string>
    <string name="WEEKLY">Weekly</string>
    <string name="MONTHLY">Monthly</string>
    <string name="YEARLY">Yearly</string>
    <string name="SESSION">Session</string>
    <string name="MYSELF">Myself</string>
    <string name="MEMBER">Member</string>
    <string name="MEMBERS">Members</string>
    <string name="LOGOUT">Logout</string>
    <string name="LOGOUT_APPLICATION">Logout Application</string>
    <string name="ALLOW_PERMISSIONS">Allow Permissions</string>
    <string name="ADD_MORE">Add More</string>
    <string name="TERMS_AND_CONDITIONS">Terms &amp; Conditions</string>
    <string name="PRIVACY_POLICY">Privacy Policy</string>
    <string name="VERSION">Version</string>
    <string name="DISCLAIMER">Disclaimer</string>
    <string name="SELECT_LANGUAGE">Select Language</string>
    <string name="CHOOSE_APP_LANGUAGE">Choose App Language</string>
    <string name="CHOOSE_APP_LANGUAGE_DESC">You can choose your app language as per\nyour preference</string>
    <string name="RECORDS_EMPTY">Records Empty</string>
    <string name="RECORDS_EMPTY_DESC">Add a Record and it will show up here</string>
    <string name="BIOMETRIC_AUTHENTICATION">Biometric Authentication</string>
    <string name="BIOMETRIC_AUTHENTICATION_DESC">Enter phone screen lock Fingerprint,\n Pattern, PIN or Password</string>
    <string name="CONSULT_WITH_THERAPIST">Consult with Mental Health Professional</string>
    <string name="BLOGS">Blogs</string>
    <string name="VIDEOS">Videos</string>
    <string name="AUDIOS">Audios</string>
    <string name="SELF">Self</string>
    <string name="FATHER">Father</string>
    <string name="MOTHER">Mother</string>
    <string name="SON">Son</string>
    <string name="DAUGHTER">Daughter</string>
    <string name="BROTHER">Brother</string>
    <string name="SISTER">Sister</string>
    <string name="WIFE">Wife</string>
    <string name="HUSBAND">Husband</string>
    <string name="SPOUSE">Spouse</string>
    <string name="GRAND_FATHER">Grand Father</string>
    <string name="GRAND_MOTHER">Grand Mother</string>
    <string name="JANUARY">January</string>
    <string name="FEBRUARY">February</string>
    <string name="MARCH">March</string>
    <string name="APRIL">April</string>
    <string name="MAY">May</string>
    <string name="JUNE">June</string>
    <string name="JULY">July</string>
    <string name="AUGUST">August</string>
    <string name="SEPTEMBER">September</string>
    <string name="OCTOBER">October</string>
    <string name="NOVEMBER">November</string>
    <string name="DECEMBER">December</string>
    <string name="MON">Mon</string>
    <string name="TUE">Tue</string>
    <string name="WED">Wed</string>
    <string name="THU">Thu</string>
    <string name="FRI">Fri</string>
    <string name="SAT">Sat</string>
    <string name="SUN">Sun</string>
    <string name="YR">Yr</string>
    <string name="YRS">Yrs</string>
    <string name="DAYS">Days</string>
    <string name="MONTHS">Months</string>
    <string name="LANGUAGE">Language</string>
    <string name="ENGLISH">English</string>
    <string name="HINDI">Hindi</string>
    <string name="LANGUAGE_API_SUCCESS_MSG">Language preference stored successfully</string>
    <string name="BADGE_CONTENDER">Contender</string>
    <string name="BADGE_CHALLENGER">Challenger</string>
    <string name="BADGE_ACHIEVER">Achiever</string>
    <string name="HEIGHT">Height</string>
    <string name="WEIGHT">Weight</string>
    <string name="BMI">BMI</string>
    <string name="DURATION">Duration</string>
    <string name="WAIST">Waist</string>
    <string name="SYSTOLIC">Systolic</string>
    <string name="DIASTOLIC">Diastolic</string>
    <string name="BLOOD_PRESSURE">Blood Pressure</string>
    <string name="BP">Blood Pressure</string>
    <string name="FEET_INCH">Feet/inch</string>
    <string name="FT_IN" translatable="false">ft,in</string>
    <string name="FT" translatable="false">ft</string>
    <string name="INCH" translatable="false">inch</string>
    <string name="CM" translatable="false">cm</string>
    <string name="CENTIMETER" translatable="false">Centimeter</string>
    <string name="LBS" translatable="false">lbs</string>
    <string name="KG" translatable="false">kg</string>
    <string name="MM_HG" translatable="false">mm Hg</string>
    <string name="MG_DL" translatable="false">mg/dL</string>
    <string name="MMOL_L" translatable="false">mmol/L</string>
    <string name="KCAL" translatable="false">Kcal</string>
    <string name="MIN" translatable="false">min</string>
    <string name="KM" translatable="false">km</string>
    <string name="MTR" translatable="false">mtr</string>
    <string name="ML" translatable="false">ml</string>
    <string name="LITRE" translatable="false">Litre</string>
    <string name="LITRES" translatable="false">Litres</string>
    <string name="LOW">Low</string>
    <string name="HIGH">High</string>
    <string name="HIGH_NORMAL">High normal</string>
    <string name="BOUNDRY_LOW_RISK">Low Risk</string>
    <string name="BOUNDRY_HIGH_RISK">High Risk</string>
    <string name="ABNORMAL">Abnormal</string>
    <string name="DIABETIC">DIABETIC</string>
    <string name="EARLY_DIABETIC">EARLY DIABETIC</string>
    <string name="VERY_HIGH">VERY HIGH</string>
    <string name="VERY_LOW">VERY LOW</string>
    <string name="MILDLY_HIGH">MILDLY HIGH</string>
    <string name="MILDLY_LOW">MILDLY LOW</string>
    <string name="BORDERLINE_HIGH">BORDERLINE HIGH</string>
    <string name="BETTER">BETTER</string>
    <string name="NEAR_OPTIMAL">NEAR OPTIMAL</string>
    <string name="MODERATE_LOW">MODERATE LOW</string>
    <string name="MODERATE_HIGH">MODERATE HIGH</string>
    <string name="MILD_LOW">MILD LOW</string>
    <string name="MILD_HIGH">MILD HIGH</string>
    <string name="AVERAGE_RISK">AVERAGE RISK</string>
    <string name="DESIRABLE">DESIRABLE</string>
    <string name="BEST">BEST</string>
    <string name="OPTIMAL">OPTIMAL</string>
    <string name="GOOD">GOOD</string>
    <string name="PRE_HYPERTENSION">PreHypertension</string>
    <string name="HOME">Home</string>
    <string name="TRACK">Track</string>
    <string name="YOUR_POLICY">Your Policy</string>
    <string name="PROFILE">Profile</string>
    <string name="HIGH_CHOLESTEROL">High Cholesterol</string>
    <string name="DIABETES">Diabetes</string>
    <string name="HEART_DISEASE">Heart Diseases</string>
    <string name="STEP_1_OF_4">Step 1 of 3</string>
    <string name="PERSONAL_DETAILS">Personal Details</string>
    <string name="SIGN_UP_DESC">Please share your personal details for registration \n and better recommendations</string>
    <string name="I_HAVE_READ_AGREE">I have read &amp; agree to</string>
    <string name="USERNAME_COMPULSARY">Name *</string>
    <string name="HINT_USERNAME">Enter your name</string>
    <string name="MOBILE_NO_COMPULSARY">Mobile No. *</string>
    <string name="HINT_MOBILE_NO">Enter your mobile no.</string>
    <string name="EMAIL_COMPULSARY2">Email *</string>
    <string name="HINT_EMAIL">Enter your email</string>
    <string name="SELECT_ALL_THAT_APPLIES_TO_YOU">Select all that applies to you</string>
    <string name="HEALTH_CONDITION">Health Condition</string>
    <string name="KIDNEY_DISEASE">Kidney disease</string>
    <string name="STROKE">Stroke</string>
    <string name="CORONARY_ARTERY">Coronary artery</string>
    <string name="FAMILY_HISTORY_OF_HEART_DISEASE">Family history of heart disease</string>
</resources>