<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_30sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_signup_heart"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_110sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/img_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_step_number"
            style="@style/VivantTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/STEP_1_OF_4"
            android:textColor="@color/vivant_track_param_textcolor"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_signup_heart" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_personal_details"
            style="@style/VivantTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/PERSONAL_DETAILS"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_step_number" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_personal_details_desc"
            style="@style/VivantDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/SIGN_UP_DESC"
            android:textColor="@color/vivant_track_param_textcolor"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/lbl_personal_details"
            app:layout_constraintTop_toBottomOf="@+id/lbl_personal_details" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_first_name"
            style="@style/VivantDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/USERNAME_COMPULSARY"
            android:textColor="@color/almost_black"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/lbl_personal_details"
            app:layout_constraintTop_toBottomOf="@+id/lbl_personal_details_desc" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_edt_signup_first_name"
            style="@style/MyTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_first_name">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_signup_first_name"
                style="@style/MyEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/HINT_USERNAME"
                android:imeOptions="actionNext"
                android:includeFontPadding="false"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_email"
            style="@style/VivantDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/EMAIL_COMPULSARY2"
            android:textColor="@color/almost_black"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/lbl_personal_details"
            app:layout_constraintTop_toBottomOf="@+id/til_edt_signup_first_name" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_edt_signup_email"
            style="@style/MyTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_signup_email"
                style="@style/MyEditTextStyleEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HINT_EMAIL"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_phone"
            style="@style/VivantDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/MOBILE_NO_COMPULSARY"
            android:textColor="@color/almost_black"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/lbl_personal_details"
            app:layout_constraintTop_toBottomOf="@+id/til_edt_signup_email" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_edt_signup_phone"
            style="@style/MyTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_signup_phone"
                style="@style/MyEditTextStyleNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HINT_MOBILE_NO"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/check_box_terms_conditions_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@+id/txt_privacy_policy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_terms_conditions" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_terms_conditions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/I_HAVE_READ_AGREE"
            android:textColor="@color/vivant_charcoal_grey"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="@+id/til_edt_signup_phone"
            app:layout_constraintStart_toEndOf="@+id/check_box_terms_conditions_1"
            app:layout_constraintTop_toBottomOf="@+id/til_edt_signup_phone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/PRIVACY_POLICY"
            android:textColor="@color/vivant_charcoal_grey"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/txt_terms_conditions"
            app:layout_constraintTop_toBottomOf="@+id/txt_terms_conditions" />

        <com.test.my.app.common.view.ArcButton
            android:id="@+id/btn_proceed"
            style="@style/CustomButton"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/PROCEED"
            app:isTemplate="true"
            app:layout_constraintEnd_toEndOf="@+id/til_edt_signup_phone"
            app:layout_constraintStart_toStartOf="@+id/til_edt_signup_phone"
            app:layout_constraintTop_toBottomOf="@+id/txt_privacy_policy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>